# statsbombpy-local

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: lint_type_check_and_test.yml  publish.yml  test-suite.yml
statsbombpy_local/: _api.py  _config.py  _public.py  _utils.py  sb.py
tests/: test_api.py  test_config.py  test_public.py  test_sb.py  test_utils.py
tests/data/: competitions.json
tests/data/events/: 18245.json  3795108.json  7298.json
tests/data/lineups/: 7298.json
tests/data/matches/2/: 44.json
tests/data/matches/55/: 43.json
tests/data/three-sixty/: 3788741.json  3795108.json
